--- a/index.html
+++ b/index.html
@@ -298,6 +298,7 @@
                     	<button type="button" class="search-trigger"><i class="icon anm anm-search-l"></i></button>
                     </div>
         	</div>
+		</div>
         </div>
     </div>
     <!--End Header-->
